package Programs;

public class MenuService extends ItemService{
}
