package Structures;

/**
 * An object representing an inventory item tracked in a system. For example: Ingredients, Merchandise, etc.
 */
public class InventoryItem extends Item{

}
