package Structures;
import jakarta.persistence.Entity;
import jakarta.persistence.Id;

/**
 * Class representing an entity in a relational database. Superclass for all objects to be
 * tracked using the Relational Database in our Coffee House POS System.
 */
@Entity
public class DatabaseEntity{

}
