package Structures;

public enum OrderStatus {
    Submitted, Received, In_Progress, Ready
}
