@startuml

title __COFFEE SHOP PROJECT's Class Diagram__\n

  namespace Interfaces {
    interface Interfaces.InventoryRepository {
    }
  }
  

  namespace Interfaces {
    interface Interfaces.OrderRepository {
    }
  }
  

  namespace Interfaces {
    interface Interfaces.RepositoryInterface {
    }
  }
  

  namespace Interfaces {
    interface Interfaces.UserRepository {
    }
  }
  

  namespace Programs {
    class Programs.EntityService {
    }
  }
  

  namespace Programs {
    class Programs.HashGenerator {
    }
  }
  

  namespace Programs {
    class Programs.InventoryService {
    }
  }
  

  namespace Programs {
    class Programs.ItemService {
    }
  }
  

  namespace Programs {
    class Programs.MenuService {
    }
  }
  

  namespace Programs {
    class Programs.OrderService {
    }
  }
  

  namespace Programs {
    class Programs.UserService {
    }
  }
  

  namespace Structures {
    class Structures.DatabaseEntity {
    }
  }
  

  namespace Structures {
    class Structures.InventoryItem {
    }
  }
  

  namespace Structures {
    class Structures.Item {
    }
  }
  

  namespace Structures {
    class Structures.MenuItem {
    }
  }
  

  namespace Structures {
    class Structures.Order {
    }
  }
  

  namespace Structures {
    enum OrderStatus {
    }
  }
  

  namespace Structures {
    class Structures.User {
    }
  }
  

  Programs.EntityService .up.|> Interfaces.RepositoryInterface
  Programs.InventoryService -up-|> Programs.ItemService
  Programs.ItemService .up.|> Interfaces.InventoryRepository
  Programs.MenuService -up-|> Programs.ItemService
  Programs.OrderService .up.|> Interfaces.OrderRepository
  Programs.UserService .up.|> Interfaces.UserRepository
  Programs.UserService -up-|> Programs.EntityService
  Structures.InventoryItem -up-|> Structures.Item
  Structures.Item -up-|> Structures.DatabaseEntity
  Structures.MenuItem -up-|> Structures.Item
  Structures.Order -up-|> Structures.DatabaseEntity
  Structures.Order o-- Structures.OrderStatus : status
  Structures.User -up-|> Structures.DatabaseEntity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
